--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,7 @@ block extra
   script(src='/javascripts/node_modules/jquery.min.js')
 
   script(src='/javascripts/tree.js')
+  script(src='/javascripts/binarySearch.js')
   link(rel='stylesheet', href='/stylesheets/tree.css')
 
 block content
