Bugfixes, error while drawing

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
   p Welcome to #{title}
   div(id='tree')
   div(id='center')
-      input(id='new') 5
+      input(id='new')
       button(id='en') Enter number!
   script
     include chart.js
