--- a/views/index.jade
+++ b/views/index.jade
@@ -15,6 +15,6 @@ block content
   div(id='tree')
   div(id='center')
       input(id='new')
-      button(id='en') Enter number!
+      button(id='en' value='5') Enter number!
   script
     include chart.js
